Updated classes and completed header

--- a/test.html
+++ b/test.html
@@ -11,45 +11,57 @@
 
 
 <body>
-    <div class="container main-window">
-        <header>
+    <div class="main-window">
+        <nav>
+            <div class="top-header">
+                <a class="top-header-logo" href="/">
+                    <img src="./pics/logo.png" class="top-header-logo-img">
+                    <span class="top-header-logo-text">Chameleon</span>
+                    <span class="top-header-slogan-text">Travel the World Now</span>
+                </a>
 
-            <a class="site-logo" href="/">
-                <img src="./pics/logo.png" alt="Poly - UI Toolkit">
-                <span class="logo-text">Chameleon</span>
-                <span class="slogan-text">Travel the World Now</span>
-            </a>
+                <div class="top-header-panel">
+                    <div class="top-header-social-icons">
+                        <a href="#"><img alt="Twitter" src="pics/twitter.png"></a>
+                        <a href="#"><img alt="Rss" src="pics/rss.png"></a>
+                        <a href="#"><img alt="Facebook" class="last-img" src="pics/facebook.png"></a>
+                    </div>
 
-
-            <div class="top-panel">
-
-                <div class="social-icons">
-                    <a href="#"><img alt="Twitter" src="pics/twitter.png"></a>
-                    <a href="#"><img alt="Rss" src="pics/rss.png"></a>
-                    <a href="#"><img alt="Facebook" class="last-img" src="pics/facebook.png"></a>
+                    <div class="top-header-search">
+                        <form class="top-header-search-form" method="get">
+                            <input class="top-header-search-input" name="s" type="text" value="Search this website...">
+                            <input class="top-header-search-btn" src="pics/search_btn.png" type="image">
+                        </form>
+                    </div>
                 </div>
 
-                <div class="search">
-                    <form id="search-form" method="get">
-                        <input class="search-input" name="s" type="text" value="Search this website...">
-                        <input class="search-btn" src="pics/search_btn.png" type="image">
-                    </form>
-                </div>
+                <ul class="top-header-nav">
+                    <li><a href="#" class="first-el">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Page Templates</a></li>
+                    <li><a href="#">Shortcodes</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
             </div>
 
+            <div class="secondary-header">
+                <ul class="secondary-header-container">
+                    <div class="secondary-header-nav">
+                        <li><a href="#" class="first-el ">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Page Templates</a></li>
+                        <li><a href="#">Shortcodes</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Page Templates</a></li>
+                        <li><a href="#">Shortcodes</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </div>
+                </ul>
+            </div>
+        </nav>
 
-
-
-            <ul class="nav">
-                <li class="first"><a class="first" href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Page Templates</a></li>
-                <li><a href="#">Shortcodes</a></li>
-                <li class="last"><a href="#">Blog</a></li>
-            </ul>
-        </header>
-        <nav>manowar</nav>
         <main>
             MAerina
         </main>
