--- a/test.html
+++ b/test.html
@@ -65,7 +65,50 @@
         <main>
             MAerina
         </main>
-        <footer>PEsho</footer>
+        <footer>
+            <div class="main-footer">
+                <div class="main-footer-column">
+                    <a class="main-footer-logo" href="/">
+                        <img src="./pics/logo.png" class="main-footer-logo-img">
+                        <span class="main-footer-logo-text">Chameleon</span>
+                        <span class="main-footer-slogan-text">Travel the World Now</span>
+                    </a>
+
+                    <span>&copy; Chameleon Theme 2010</span>The Peruvian population, estimated at 31.2 million in 2015,[10] is multiethnic, including Amerindians, Europeans, Africans and Asians. The main spoken language is Spanish, although a significant
+                    number of Peruvians speak Quechua or other native languages. This mixture of cultural traditions has resulted in a wide diversity of expressions in fields such as art, cuisine, literature, and music.
+                </div>
+                <div class="main-footer-column footer-list">
+                    <span>Latest Posts</span>
+
+                    <li>How to get to Machu Picchu</li>
+                    <li>Handling the heights </li>
+                    <li>Chewing CoCa leaves</li>
+                    <li>Lots of money to spend here</li>
+                    <li>Leave worries home </li>
+                    <li>And always return to PEru</li>
+
+                </div>
+                <div class="main-footer-column">
+                    <span>Todor</span> The Peruvian population, estimated at 31.2 million in 2015,[10] is multiethnic, including Amerindians, Europeans, Africans and Asians. The main spoken language is Spanish, although a significant number of Peruvians
+                    speak Quechua or other native languages. This mixture of cultural traditions has resulted in a wide diversity of expressions in fields such as art, cuisine, literature, and music.
+                </div>
+                <div class="main-footer-column footer-list">
+                    <span>Stuff to Bring</span>
+
+                    <li>Sun-Cream and glassessssssss</li>
+                    <li>A lot of energy drinks and good </li>
+                    <li>Positive vibe and no girl-friends</li>
+                    <li>Lots of money to spend here</li>
+                    <li>Leave worries home </li>
+                    <li>And always return to PEru</li>
+
+                </div>
+
+            </div>
+            <div class="bottom-footer">
+                <p>Designed by <span class="bottom-footer-dark">ElegantWordPressThemes</span> | Powered by <span class="bottom-footer-dark">WordPress</span></p>
+            </div>
+        </footer>
     </div>
 </body>
 
