--- a/test.html
+++ b/test.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="./test.css">
     <title>Document</title>
 </head>
@@ -12,7 +16,9 @@
 
 <body>
     <div class="main-window">
+        <!-- Start of Navigation -->
         <nav>
+
             <div class="top-header">
                 <a class="top-header-logo" href="/">
                     <img src="./pics/logo.png" class="top-header-logo-img">
@@ -61,9 +67,61 @@
                 </ul>
             </div>
         </nav>
-
+        <!-- End of Nav -->
         <main>
-            MAerina
+            <!-- Start of CArousel -->
+            <div id="myCarousel" class="carousel slide " data-ride="carousel slide" data-interval="5000">
+
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                <!-- Carousel pics -->
+                <div class="carousel-inner ">
+                    <div class="item active ">
+                        <img src="./pics/machu.png" class="carousel-img">
+
+                    </div>
+                    <div class="item">
+                        <img src="./pics/pyramids.png" class="carousel-img">
+
+                    </div>
+                    <div class="item">
+                        <img src="./pics/angkor.png" class="carousel-img">
+
+                    </div>
+                    <div class="item">
+                        <img src="./pics/rila.png" class="carousel-img">
+
+                    </div>
+                    <!-- CArousel main window caption -->
+                    <div class="carousel-caption">
+
+                        <h2>Leave Your Comfort Zone And Travel the World</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboridsadasdasdasdsadass nisi ut aliquidsadadsadsadsap
+                            ex ea commodo consequat</p>
+                        <a href="#" class="btn carousel-caption-btn ">Read More</a>
+
+                    </div>
+                </div>
+
+                <!-- Carousel navigation arrows -->
+                <span href="#myCarousel" class="right carousel-control" data-slide="next">
+                    <span>
+                         <img class="carousel-right-arrow" src="./pics/carousel-right-arrow.png" />
+                    </span>
+                </span>
+                <span href="#myCarousel" class="left carousel-control" data-slide="prev">
+                        <span>
+                             <img class="carousel-left-arrow" src="./pics/carousel-left-arrow.png" />
+                        </span>
+                </span>
+            </div>
+            <!-- End of CArousel -->
+
         </main>
         <footer>
             <div class="main-footer">
