--- a/test.html
+++ b/test.html
@@ -121,7 +121,12 @@
                 </span>
             </div>
             <!-- End of CArousel -->
-
+            <hr class="section-separator">
+            <div class="jumbotron main-jumbotron-section">
+                <h2>"Travel is the only thing you buy that makes you richer"</h2>
+                <p class="lead">He who does not travel does not know the value of men.</p>
+            </div>
+            <hr class="section-separator">
         </main>
         <footer>
             <div class="main-footer">
