--- a/blog.html
+++ b/blog.html
@@ -81,15 +81,15 @@
                 <div class="row">
 
                     <!-- Blog Entries Column -->
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-md-offset-1">
 
-                        <h1 class="my-4">Page Heading
+                        <h2 class="my-4">Page Heading
                             <small>Secondary Text</small>
-                        </h1>
+                        </h2>
 
                         <!-- Blog Post -->
 
-                        <div class="card-entry-container">
+                        <div class="card-entry-container ">
                             <img class="card-img-top img-thumbnail img-responsive" src="./pics/post-pic.png" alt="Card image cap">
                             <div class="card-entry-text">
                                 <h4 class="card-title">Post Title</h4>
