--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="./index.css">
+
     <title>Document</title>
 </head>
 
 
 <body>
     <div class="main-window">
-        <!-- Start of Navigation -->
+
         <div id="template-content">
 
 
