first page responsiveness complete

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
 
         <div id="template-content">
 
-
         </div>
 
         <footer>
@@ -32,8 +31,8 @@
                         <span class="main-footer-slogan-text">Travel the World Now</span>
                     </a>
 
-                    <span>&copy; Chameleon Theme 2010</span>The Peruvian population, estimated at 31.2 million in 2015,[10] is multiethnic, including Amerindians, Europeans, Africans and Asians. The main spoken language is Spanish, although a significant
-                    number of Peruvians speak Quechua or other native languages. This mixture of cultural traditions has resulted in a wide diversity of expressions in fields such as art, cuisine, literature, and music.
+                    <span>&copy; Chameleon Theme 2010</span>The Peruvian population, estimated at 31.2 million in 2015,[10] is multiethnic, including Amerindians, Europeans, Africans and Asians.
+
                 </div>
                 <div class="main-footer-column footer-list">
                     <span>Latest Posts</span>
@@ -48,7 +47,6 @@
                 </div>
                 <div class="main-footer-column">
                     <span>Todor</span> The Peruvian population, estimated at 31.2 million in 2015,[10] is multiethnic, including Amerindians, Europeans, Africans and Asians. The main spoken language is Spanish, although a significant number of Peruvians
-                    speak Quechua or other native languages. This mixture of cultural traditions has resulted in a wide diversity of expressions in fields such as art, cuisine, literature, and music.
                 </div>
                 <div class="main-footer-column footer-list">
                     <span>Stuff to Bring</span>
