working on responsioveness

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <footer>
             <div class="main-footer">
                 <div class="main-footer-column">
-                    <a class="main-footer-logo" href="/">
+                    <a class="main-footer-logo" href="#/home">
                         <img src="./pics/logo.png" class="main-footer-logo-img">
                         <span class="main-footer-logo-text">Chameleon</span>
                         <span class="main-footer-slogan-text">Travel the World Now</span>
